fix: correct z-index value for dropdown menu and refactor search results

--- a/src/app/shared/components/filter-controls/filter-controls.component.scss
+++ b/src/app/shared/components/filter-controls/filter-controls.component.scss
@@ -31,7 +31,7 @@
       display: flex;
       flex-direction: column;
       gap: 6px;
-      z-index: 99;
+          z-index: 999;
       .item {
         padding: 8px;
         color: $thirdly-color;
